--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <body>
 <video type="video/mp4">
-  <source src="sp/01.mp4" type="video/mp4">
+  <source src="01.mp4" type="video/mp4">
 </video>
 <span></span>
 <script>
